src/test/ui/unsafe/ranged_ints2.stderr
error[E0133]: mutation of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/ranged_ints2.rs:8:13
   |
LL |     let y = &mut x.0;
   |             ^^^^^^^^ mutation of layout constrained field
   |
   = note: mutating layout constrained fields cannot statically be checked for valid values

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
